--- a/templates/html/pages/admin/formulario-evento.html
+++ b/templates/html/pages/admin/formulario-evento.html
@@ -1,61 +1,73 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="w-50">
-        <form action="{{ url_for('novo_evento') }}" method="POST" class="border p-4 rounded">
-            {% if evento %}
-                <h1 class="text-center mb-4">Atualizar evento</h1>
-            {% else %}
-                <h1 class="text-center mb-4">Novo evento</h1>
-            {% endif %}
-            <div class="form-group mb-3">
-                <label for="nome_evento">Nome</label>
-                <input name="nome_evento" class="form-control" required>
-            </div>
-            <div class="form-group mb-3">
-                <label for="tipo_evento">Tipo</label>
-                <select name="tipo_evento" id="tipo_evento" class="form-control" required>
-                    <option value="">Selecione o tipo de evento</option>
-                    <option value="Casamento">Casamento</option>
-                    <option value="Aniversario">Aniversário</option>
-                    <option value="Corporativo">Corporativo</option>
-                    <option value="Formatura">Formatura</option>
-                    <option value="Debutante">Debutante</option>
-                    <option value="Batizado">Batizado</option>
-                    <option value="Confraternização">Confraternização</option>
-                    <option value="Cultural">Cultural</option>
-                    <option value="Outros">Outros</option>
-                </select>
-            </div>
-            <div class="form-group mb-3">
-                <label for="data_evento">Data</label>
-                <input type="date" name="data_evento" class="form-control" id="data_evento" required>
-            </div>
-            <div class="form-group mb-3">
-                <label for="horario_evento">Horário</label>
-                <input type="time" name="horario_evento" class="form-control" id="horario_evento" required>
-            </div>
-            <div class="form-group mb-3">
-                <label for="cliente_evento">Cliente</label>
-                <select name="cliente_evento" class="form-select" id="cliente_evento" required>
-                    <option value="" disabled selected>Selecione um cliente</option>
-                    {% for cliente in clientes %}
-                        {% if cliente[0] != "000.000.000-00" %}
-                            <option value="{{ cliente[0] }}">{{ cliente[0] }} - {{ cliente[1] }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="text-end">
-                <a href="{{ url_for('eventos_admin') }}" class="btn btn-secondary">
-                    Voltar
-                </a>
-                <button class="btn btn-primary" type="submit">
-                    Salvar
-                </button>
-            </div>
-        </form>
+<div class="bg-img d-flex align-items-center justify-content-center min-vh-100">
+  <div class="container d-flex justify-content-center align-items-center vh-100">
+    
+    <div class="card p-5" style="width: 50%;">
+      
+     
+      {% if evento %}
+        <h1 class="text-center mb-5" style="font-size: 2.5rem;">Atualizar evento</h1>
+      {% else %}
+        <h1 class="text-center mb-5" style="font-size: 2.5rem;">Novo evento</h1>
+      {% endif %}
+      
+   
+      <form action="{{ url_for('novo_evento') }}" method="POST">
+        <div class="form-group mb-4">
+          <label for="nome_evento" style="font-size: 1.2rem;">Nome</label>
+          <input name="nome_evento" class="form-control" required>
+        </div>
+        
+        <div class="form-group mb-4">
+          <label for="tipo_evento" style="font-size: 1.2rem;">Tipo</label>
+          <select name="tipo_evento" id="tipo_evento" class="form-control" required>
+            <option value="">Selecione o tipo de evento</option>
+            <option value="Casamento">Casamento</option>
+            <option value="Aniversario">Aniversário</option>
+            <option value="Corporativo">Corporativo</option>
+            <option value="Formatura">Formatura</option>
+            <option value="Debutante">Debutante</option>
+            <option value="Batizado">Batizado</option>
+            <option value="Confraternização">Confraternização</option>
+            <option value="Cultural">Cultural</option>
+            <option value="Outros">Outros</option>
+          </select>
+        </div>
+
+        <div class="form-group mb-4">
+          <label for="data_evento" style="font-size: 1.2rem;">Data</label>
+          <input type="date" name="data_evento" class="form-control" id="data_evento" required>
+        </div>
+        
+        <div class="form-group mb-4">
+          <label for="horario_evento" style="font-size: 1.2rem;">Horário</label>
+          <input type="time" name="horario_evento" class="form-control" id="horario_evento" required>
+        </div>
+
+        <div class="form-group mb-4">
+          <label for="cliente_evento" style="font-size: 1.2rem;">Cliente</label>
+          <select name="cliente_evento" class="form-select" id="cliente_evento" required>
+            <option value="" disabled selected>Selecione um cliente</option>
+            {% for cliente in clientes %}
+              {% if cliente[0] != "000.000.000-00" %}
+                <option value="{{ cliente[0] }}">{{ cliente[0] }} - {{ cliente[1] }}</option>
+              {% endif %}
+            {% endfor %}
+          </select>
+        </div>
+
+    
+        <div class="text-end">
+          <a href="{{ url_for('eventos_admin') }}" class="btn btn-secondary" style="font-size: 1.1rem;">Voltar</a>
+          <button class="btn btn-primary" type="submit" style="font-size: 1.1rem;">Salvar</button>
+        </div>
+      </form>
+      
     </div>
+   
+
+  </div>
 </div>
 {% endblock %}
