--- a/templates/html/pages/admin/mobilias-admin.html
+++ b/templates/html/pages/admin/mobilias-admin.html
@@ -1,46 +1,57 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="text-center">Mobílias</h1>
-<div class="container d-flex flex-column align-items-center">
-    <div class="w-100 d-flex justify-content-end mb-3">
+
+<div class="bg-img d-flex align-items-center justify-content-center min-vh-100">
+  <div class="container d-flex flex-column align-items-center">
+    
+    
+    <div class="card p-5" style="width: 80%;">
+      <h1 class="text-center mb-5" style="font-size: 2.5rem;">Mobílias</h1>
+      
+      
+      <div class="w-100 d-flex justify-content-end mb-3">
         <a href="{{ url_for('mobilias_alugadas_admin') }}" method="GET" class="btn btn-info">Ver aluguéis</a>
         <a href="{{ url_for('nova_mobilia_admin') }}" class="btn btn-primary">Adicionar mobília</a>
-    </div>
-    <table class="table table">
+      </div>
+
+  
+      <table class="table table-striped table-bordered">
         <thead>
           <tr>
-            <th scope="col" class="text-center">Tipo</th>
-            <th scope="col" class="text-center">Quantidade</th>
-            <th scope="col" class="text-center">Preço</th>
-            <th scope="col" class="text-center">Ações</th>
+            <th scope="col" class="text-center" style="font-size: 1.2rem;">Tipo</th>
+            <th scope="col" class="text-center" style="font-size: 1.2rem;">Quantidade</th>
+            <th scope="col" class="text-center" style="font-size: 1.2rem;">Preço</th>
+            <th scope="col" class="text-center" style="font-size: 1.2rem;">Ações</th>
           </tr>
         </thead>
         <tbody>
           {% for mobilia in mobilias %}
           <tr>
-              <td class="text-center">{{ mobilia[0] }}</td>
-              <td class="text-center">{{ mobilia[1] }}</td>
-              <td class="text-center">{{ mobilia[2] }}</td>
-              <td class="text-center">
-                <form action="{{ url_for('deletar_mobilia_admin', tipo_mobilia=mobilia[0]) }}" method="POST" style="display:inline;" onsubmit="return confirmDelete();">
-                  <button type="submit" class="btn btn-danger">Excluir</button>
-                </form>
-                <form action="{{ url_for('editar_mobilia_admin', tipo_mobilia=mobilia[0]) }}" method="GET" style="display:inline;">
-                    <button type="submit" class="btn btn-warning">Editar</button>
-                </form>
-              </td>
+            <td class="text-center" style="font-size: 1.1rem;">{{ mobilia[0] }}</td>
+            <td class="text-center" style="font-size: 1.1rem;">{{ mobilia[1] }}</td>
+            <td class="text-center" style="font-size: 1.1rem;">{{ mobilia[2] }}</td>
+            <td class="text-center">
+              <form action="{{ url_for('deletar_mobilia_admin', tipo_mobilia=mobilia[0]) }}" method="POST" style="display:inline;" onsubmit="return confirmDelete();">
+                <button type="submit" class="btn btn-danger" style="font-size: 1rem;">Excluir</button>
+              </form>
+              <form action="{{ url_for('editar_mobilia_admin', tipo_mobilia=mobilia[0]) }}" method="GET" style="display:inline;">
+                <button type="submit" class="btn btn-warning" style="font-size: 1rem;">Editar</button>
+              </form>
+            </td>
           </tr>
           {% endfor %}
         </tbody>
       </table>
-      <div class="mt-3">
+      
     </div>
+ 
+  </div>
 </div>
 
 <script>
-    function confirmDelete() {
-        return confirm('Tem certeza que deseja excluir essa mobília?');
-    }
+  function confirmDelete() {
+    return confirm('Tem certeza que deseja excluir essa mobília?');
+  }
 </script>
 
 {% endblock %}
