--- a/templates/html/pages/cliente/formulario-cliente.html
+++ b/templates/html/pages/cliente/formulario-cliente.html
@@ -53,8 +53,8 @@
         </div>
 
         <div class="btn-cadastre d-flex justify-content-between align-items-center">
-          <button type="submit" class="btn btn btn-login">Cadastrar</button>
-          <a href="javascript:history.back()">Voltar</a>
+          <a href="javascript:history.back()" class="btn btn-link">Voltar</a>
+          <button type="submit" class="btn btn-login rounded">Cadastrar</button>
         </div>
       </fieldset>
     </form>
