--- a/templates/html/pages/contato.html
+++ b/templates/html/pages/contato.html
@@ -13,8 +13,8 @@
                 </div>
             </div>
 
-            <div class="d-flex justify-content-between align-items-center mt-4">
-                <a id="redirection" href="{{ url_for('home') }}" class="btn btn btn-login">Voltar</a>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+                <a id="redirection" href="{{ url_for('home') }}" class="btn btn-login">Voltar</a>
             </div>
         </div>
     </div>
