--- a/templates/html/pages/dashboard.html
+++ b/templates/html/pages/dashboard.html
@@ -11,23 +11,20 @@
             </p>
         </div>
 
-    
-        <div class="text-right mb-4">
+        <div class="d-flex justify-content-end mb-4">
             {% if session.cpf != "000.000.000-00" %}
                 <a href="{{ url_for('novo_agendamento') }}" class="btn btn-primary" style="font-size: 1.2rem;">Agendar visita</a>
             {% else %}
-                <a href="{{ url_for('novo_evento') }}" class="btn btn-primary" style="font-size: 1.2rem;">Novo evento</a>
+                <a href="{{ url_for('novo_evento') }}" class="btn btn-login" style="font-size: 1.2rem;">Novo evento</a>
             {% endif %}
         </div>
 
-     
         <div class="row">
             {% if calendario %}
                 {% for data, items in calendario.items() %}
-                <div class="col-md-4 col-lg-3 mb-4">
+                <div class="col-md-6 col-lg-4 mb-4">
                     <div class="card shadow-sm" style="font-size: 1.2rem;">
-                        <div class="card-header bg-info text-white">
-                            
+                        <div class="card-header custom-card-header">
                             <h5 class="mb-0 text-center" style="font-size: 1.5rem;">{{ data | datetime('%d/%m/%Y') }}</h5>
                         </div>
                         <div class="card-body">
@@ -35,7 +32,6 @@
                                 <ul class="list-group list-group-flush">
                                     {% for item in items %}
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                                           
                                             <span style="font-size: 1.2rem;">{{ item.horario }} - {{ item.type | capitalize }}</span>
                                             <span class="badge badge-pill {% if item.type == 'evento' %}badge-success{% else %}badge-info{% endif %}" style="font-size: 1.2rem;">
                                                 {{ item.type | capitalize }}
