--- a/templates/html/pages/perfil.html
+++ b/templates/html/pages/perfil.html
@@ -31,7 +31,7 @@
                     </div>
                 </fieldset>
             </form>
-            <form action="{{ url_for('deletar_cliente', cpf=cliente[0]) }}" method="POST" onsubmit="return confirm('Tem certeza que deseja excluir sua conta? \nIsso apagará todas as informações de visitação, eventos, pagamentos e aluguel de mobília relacionados à você. Essa ação NÃO poderá ser desfeita.')">
+            <form action="{{ url_for('deletar_cliente', cpf=cliente[0]) }}" method="POST" onsubmit="return confirm('Tem certeza que deseja excluir sua conta? Essa ação NÃO poderá ser desfeita.')">
                 <button type="submit" class="btn btn-danger mt-3">Excluir conta</button>
             </form>
         </div>
